[gd_scene load_steps=11 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://resources/art/arrowkeys.png" type="Texture" id=2]
[ext_resource path="res://resources/fonts/Mechanical.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 3 )

[node name="HUD" type="Panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -230.302
margin_top = -140.698
margin_right = -9.30164
margin_bottom = -10.6984
script = ExtResource( 1 )

[node name="Controls" type="Sprite" parent="."]
position = Vector2( 78.6198, 72.1774 )
scale = Vector2( 1, 1.04 )
texture = ExtResource( 2 )

[node name="LvlLabel" type="Label" parent="."]
margin_left = 12.5701
margin_top = 16.7601
margin_right = 62.5701
margin_bottom = 34.7601
custom_fonts/font = SubResource( 1 )
text = "Level"

[node name="MsgLabel" type="Label" parent="."]
margin_left = 108.715
margin_top = 16.3016
margin_right = 218.715
margin_bottom = 36.3016
custom_fonts/font = SubResource( 2 )

[node name="MoveLabel" type="Label" parent="."]
margin_left = 141.652
margin_top = 53.9495
margin_right = 191.652
margin_bottom = 71.9495
custom_fonts/font = SubResource( 3 )
text = "MOVES"

[node name="MoveCounter" type="Label" parent="."]
margin_left = 141.652
margin_top = 74.7495
margin_right = 181.652
margin_bottom = 92.7495
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1

[node name="RestartButt" type="Button" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.64856
margin_top = -30.8192
margin_right = -130.352
margin_bottom = -6.81917
custom_fonts/font = SubResource( 5 )
text = "restart"

[node name="MenuButt" type="Button" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 99.5485
margin_top = -30.0
margin_right = -67.4524
margin_bottom = -6.0
custom_fonts/font = SubResource( 6 )
text = "menu"

[node name="QuitButt" type="Button" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 159.785
margin_top = -30.0
margin_right = -9.21536
margin_bottom = -6.0
custom_fonts/font = SubResource( 7 )
text = "quit"
[connection signal="pressed" from="RestartButt" to="." method="_on_RestartButt_pressed"]
[connection signal="pressed" from="MenuButt" to="." method="_on_MenuButt_pressed"]
[connection signal="pressed" from="QuitButt" to="." method="_on_QuitButt_pressed"]
